--- a/src/Components/LoginSignUp/styles/SignIn.css
+++ b/src/Components/LoginSignUp/styles/SignIn.css
@@ -5,7 +5,7 @@
   outline: none;
   font-family: "Poppins", sans-serif;
 }
-body {
+.body {
   display: flex;
   align-items: center;
   justify-content: center;
