--- a/src/Components/DoctorListPagination/AvailableDoctors.css
+++ b/src/Components/DoctorListPagination/AvailableDoctors.css
@@ -2,10 +2,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
   min-height: 100vh;
+  /* padding: 10px; */
 }
 
-.currrent {
-  margin-top: auto; /* Pushes pagination to the bottom */
+h1 {
+  font-size: 1.8rem;
+  /* margin-bottom: 0.5rem; */
+}
+
+h3 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  text-align: center;
+  /* max-width: 600px; */
+}
+
+.doctor_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* gap: 20px; */
+  /* margin-bottom: 10px;  */
+}
+
+.current {
+  margin-top: auto;
+  margin-bottom: 90px;
 }
