--- a/src/Components/DoctorListPagination/DoctorCard.css
+++ b/src/Components/DoctorListPagination/DoctorCard.css
@@ -1,29 +1,24 @@
 .card {
   cursor: pointer;
-  background: linear-gradient(145deg, #e0e0e0, #f9f9f9);
-  border-radius: 15px;
-  margin: 0.5rem;
+  background: #ffffff;
+  border-radius: 10px;
   overflow: hidden;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
-  padding: 0.5rem; /* Reduced padding */
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 250px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px, rgba(0, 0, 0, 0.1) 0px 1px 2px;
+  padding-top: 0.75rem;
+  padding-bottom: 0;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 250px; /* Set a fixed height */
-}
-
-.card:hover {
-  transform: translateY(-10px);
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 20px;
+  border: 1px solid #e0e0e0;
+  width: 250px;
+  height: 250px;
+  box-sizing: border-box;
 }
 
 .card_image {
   width: 100%;
-  height: 50px;
-  margin-bottom: 0.5rem;
+  height: 100px;
   overflow: hidden;
   border-radius: 15px 15px 0 0;
 }
@@ -31,7 +26,7 @@
 .card_image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 15px 15px 0 0;
   transition: transform 0.3s ease;
 }
@@ -41,13 +36,12 @@
 }
 
 .card_info {
-  margin-top: 0.5rem;
+  flex-grow: 1;
   overflow: hidden;
 }
 
 .card_info h2 {
-  margin-bottom: 0.5rem;
-  font-size: 1rem; /* Reduced font size */
+  font-size: 1.2rem;
   color: #333;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -55,12 +49,35 @@
 }
 
 .card_info h3 {
-  font-size: 0.9rem; /* Reduced font size */
+  font-size: 0.75rem;
   color: #777;
-  margin-bottom: 0.5rem;
 }
 
 .card_info p {
-  font-size: 0.8rem; /* Reduced font size */
+  font-size: 0.75rem;
   color: #555;
+}
+
+.card_info .rating {
+  font-size: 1rem;
+  font-weight: 900;
+}
+
+.card_button {
+}
+
+.card_button button {
+  width: 100%;
+  background-color: #007bff;
+  color: white;
+  padding: 5px 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: background-color 0.3s;
+}
+
+.card_button button:hover {
+  background-color: #0056b3;
 }
