--- a/src/Components/SearchBar/FindDoctorSearch.css
+++ b/src/Components/SearchBar/FindDoctorSearch.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  margin: 2px auto;
+  margin: 10px auto;
 }
 
 .availableDoctors {
@@ -25,16 +25,18 @@
 }
 
 .image {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 300px;
+  max-height: 300px;
   margin-inline: auto;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .image img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 15px 15px 0 0;
+  transition: transform 0.3s ease;
 }
 
 input {
