--- a/src/Components/UI/Modal/Modal.module.css
+++ b/src/Components/UI/Modal/Modal.module.css
@@ -13,12 +13,15 @@
   top: 15vh;
   left: 5%;
   width: 90%;
+  /* height: 70vh;
+  max-height: 70vh; */
   background-color: white;
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
