--- a/src/index.css
+++ b/src/index.css
@@ -114,3 +114,9 @@ body.dark {
   --max-width: 1200px;
   /* Landing page end */
 }
+
+.no-scroll {
+  overflow: hidden;
+  /* Optional: Prevent any scrolling on mobile devices */
+  touch-action: none;
+}
