--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,6 +11,7 @@ nav {
   width: 100%;
   background-color: var(--nav-color);
   z-index: 100;
+  border-bottom: 0.25px solid transparent;
 }
 
 nav .nav-bar {
