Edit user details done

--- a/src/Components/SideBar/Sidebar.css
+++ b/src/Components/SideBar/Sidebar.css
@@ -66,7 +66,7 @@
 }
 
 .active {
-  background: var(--primary-color-dark); /* Updated color */
+  background: var(--primary-color-dark);
   margin-left: 0;
 }
 
