--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -2,22 +2,38 @@
   display: flex;
   gap: 10px;
 }
-.parentContainer{
+.parentContainer {
   width: 100%;
 }
 
+.CompactCard {
+  min-height: 150px;
+  padding: 16px !important;
+  margin: 10px;
+}
+.radialBar {
+  width: 80%;
+  height: auto;
+}
+
+.detail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+
 @media screen and (max-width: 1200px) {
-  .Cards{
+  .Cards {
     flex-direction: column;
   }
-  .parentContainer{
+  .parentContainer {
     height: 9rem;
   }
 }
 
-@media screen and (max-width: 768px)
-{
-  .Cards{
+@media screen and (max-width: 768px) {
+  .Cards {
     width: 90%;
   }
 }
