--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,8 +1,3 @@
-/* body {
-  height: 100vh;
-  background-color: var(--body-color);
-} */
-
 nav {
   position: fixed;
   top: 0;
@@ -14,7 +9,7 @@ nav {
   border-bottom: 0.25px solid transparent;
 }
 
-nav .nav-bar {
+nav .nav_bar {
   position: relative;
   height: 100%;
   /* max-width: 1000px; */
@@ -25,11 +20,11 @@ nav .nav-bar {
   align-items: center;
 }
 
-nav .nav-bar .logo {
+nav .nav_bar .logo {
   margin-right: auto;
 }
 
-nav .nav-bar .sidebarOpen {
+nav .nav_bar .sidebarOpen {
   color: var(--nav-text-color);
   font-size: 25px;
   padding: 5px;
@@ -37,33 +32,43 @@ nav .nav-bar .sidebarOpen {
   display: none;
 }
 
-nav .nav-bar .logo a {
+nav .nav_bar .logo a {
   font-size: 30px;
   /* font-weight: 500;
   color: var(--nav-text-color); */
   text-decoration: none;
 }
 
-.menu .logo-toggle {
+.logo a {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--primary-color);
+}
+
+.logo a span {
+  color: var(--text-dark);
+}
+
+.menu .logo_toggle {
   display: none;
 }
 
-.nav-bar .logo a::before {
+.nav_bar .logo a::before {
   color: var(--nav-color);
 }
 
-.nav-bar .nav-links {
+.nav_bar .nav_links {
   display: flex;
   align-items: center;
   margin: 0 auto;
 }
 
-.nav-bar .nav-links li {
+.nav_bar .nav_links li {
   margin: 0 5px;
   list-style: none;
 }
 
-.nav-links li a {
+.nav_links li a {
   position: relative;
   font-size: 17px;
   font-weight: 500;
@@ -72,7 +77,7 @@ nav .nav-bar .logo a {
   padding: 10px;
 }
 
-.nav-links li a::before {
+.nav_links li a::before {
   content: "";
   position: absolute;
   left: 50%;
@@ -86,18 +91,18 @@ nav .nav-bar .logo a {
   transition: all 0.3s ease;
 }
 
-.nav-links li:hover a::before {
+.nav_links li:hover a::before {
   opacity: 1;
 }
 
-.nav-bar .darkLight-searchBox {
+.nav_bar .darkLight_searchBox {
   margin-left: auto;
   display: flex;
   align-items: center;
 }
 
-.darkLight-searchBox .dark-light,
-.darkLight-searchBox .searchToggle {
+.darkLight_searchBox .dark_light,
+.darkLight_searchBox .searchToggle {
   height: 40px;
   width: 40px;
   display: flex;
@@ -106,7 +111,7 @@ nav .nav-bar .logo a {
   margin: 0 5px;
 }
 
-.dark-light i,
+.dark_light i,
 .searchToggle i {
   position: absolute;
   color: var(--nav-text-color);
@@ -115,17 +120,17 @@ nav .nav-bar .logo a {
   transition: all 0.3s ease;
 }
 
-.dark-light i.sun {
+.dark_light i.sun {
   opacity: 0;
   pointer-events: none;
 }
 
-.dark-light.active i.sun {
+.dark_light.active i.sun {
   opacity: 1;
   pointer-events: auto;
 }
 
-.dark-light.active i.moon {
+.dark_light.active i.moon {
   opacity: 0;
   pointer-events: none;
 }
@@ -149,7 +154,7 @@ nav .nav-bar .logo a {
   position: relative;
 }
 
-.searchBox .search-field {
+.searchBox .search_field {
   position: absolute;
   right: 5px;
   height: 50px;
@@ -165,13 +170,13 @@ nav .nav-bar .logo a {
   transition: all 0.3s ease;
 }
 
-.searchToggle.active ~ .search-field {
+.searchToggle.active ~ .search_field {
   bottom: -74px;
   opacity: 1;
   pointer-events: auto;
 }
 
-.search-field::before {
+.search_field::before {
   content: "";
   position: absolute;
   right: 14px;
@@ -183,7 +188,7 @@ nav .nav-bar .logo a {
   z-index: -1;
 }
 
-.search-field input {
+.search_field input {
   height: 100%;
   width: 100%;
   padding: 0 45px 0 15px;
@@ -196,7 +201,7 @@ nav .nav-bar .logo a {
   background-color: var(--nav-search-bar);
 }
 
-.search-field i {
+.search_field i {
   position: absolute;
   color: var(--nav-color);
   right: 15px;
@@ -204,7 +209,7 @@ nav .nav-bar .logo a {
   cursor: pointer;
 }
 
-body.dark .search-field input {
+body.dark .search_field input {
   color: var(--nav-text-color);
 }
 
@@ -232,7 +237,7 @@ body.dark .search-field input {
 }
 
 @media (max-width: 790px) {
-  nav .nav-bar .sidebarOpen {
+  nav .nav_bar .sidebarOpen {
     display: block;
   }
 
@@ -252,7 +257,7 @@ body.dark .search-field input {
     left: 0;
   }
 
-  .menu .logo-toggle {
+  .menu .logo_toggle {
     display: block;
     width: 100%;
     display: flex;
@@ -260,18 +265,18 @@ body.dark .search-field input {
     justify-content: space-between;
   }
 
-  .logo-toggle .sideBarClose {
+  .logo_toggle .sideBarClose {
     color: var(--nav-text-color);
     font-size: 24px;
     cursor: pointer;
   }
 
-  .nav-bar .nav-links {
+  .nav_bar .nav_links {
     flex-direction: column;
     padding-top: 60px;
   }
 
-  .nav-links li a {
+  .nav_links li a {
     display: block;
     margin-top: 20px;
   }
