--- a/src/Components/SearchBar/SearchBarResults.module.css
+++ b/src/Components/SearchBar/SearchBarResults.module.css
@@ -1,4 +1,5 @@
-.results-list {
+/* SearchBarResults.module.css */
+.results_list {
   width: 100%;
   background-color: white;
   display: flex;
@@ -24,7 +25,8 @@
   text-decoration: none;
   color: black;
 }
-.results-list::-webkit-scrollbar {
+
+.results_list::-webkit-scrollbar {
   display: none;
 }
 
@@ -33,7 +35,7 @@
   background: #f0f0f0;
 }
 
-.search_suggestion_line .specialty {
+.specialty {
   font-size: 12px;
   color: gray;
 }
