--- a/src/Components/AppointmentForm/AppointmentForm.module.css
+++ b/src/Components/AppointmentForm/AppointmentForm.module.css
@@ -1,15 +1,14 @@
-/* AppointmentForm.css */
-.appointment-form {
+.appointment_form {
   padding: 15px;
   text-align: center;
 }
 
-.appointment-form h2 {
+.appointment_form h2 {
   margin-bottom: 20px;
   position: relative;
 }
 
-.details-booking {
+.details_booking {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: start;
@@ -17,7 +16,7 @@
   position: relative;
 }
 
-.details-booking::before {
+.details_booking::before {
   content: "";
   grid-column: 2 / 3;
   grid-row: 1 / -1;
@@ -33,7 +32,7 @@
   grid-column: 1 / 2;
 }
 
-.form-group {
+.form_group {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,11 +41,11 @@
   overflow-y: auto;
 }
 
-.form-group::-webkit-scrollbar {
+.form_group::-webkit-scrollbar {
   display: none;
 }
 
-.form-group .field {
+.form_group .field {
   width: 250px;
   height: 30px;
   margin: 20px 0;
@@ -54,14 +53,14 @@
   position: relative;
 }
 
-.form-group label {
+.form_group label {
   position: absolute;
   top: -25px;
   left: 10px;
   font-weight: 500;
 }
 
-.form-group .field input {
+.form_group .field input {
   height: 100%;
   width: 100%;
   border: 1px solid lightgrey;
@@ -70,7 +69,7 @@
   font-size: 18px;
 }
 
-.book-button {
+.book_button {
   background-color: #007bff;
   color: white;
   padding: 10px 15px;
@@ -79,6 +78,6 @@
   cursor: pointer;
 }
 
-.book-button:hover {
+.book_button:hover {
   background-color: #0056b3;
 }
