--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -1,16 +1,3 @@
-:root {
-  --yellow: linear-gradient(180deg, #f8d49a -146.42%, #fad79d -46.42%);
-  --orange: #fca61f;
-  --black: #242d49;
-  --gray: #788097;
-  --purple: linear-gradient(180deg, #bb67ff 0%, #c484f3 100%);
-  --pink: #ff919d;
-  --glass: rgba(255, 255, 255, 0.54);
-  --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
-  --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
-  --activeItem: #f799a354;
-}
-
 .Profile {
   /* padding: 0.5rem 3.5rem; */
   color: var(--black);
@@ -31,11 +18,11 @@
   content: "";
   position: absolute;
   top: 6rem;
-  left: 13rem; /* Position it right after the sidebar */
-  width: 2px; /* Thickness of the line */
+  left: 13rem;
+  width: 2px;
   height: 80%;
-  background-color: var(--text-light); /* Line color */
-  z-index: 1; /* Ensure it's above the background but below other content */
+  background-color: var(--text-light);
+  z-index: 1;
 }
 
 .ProfileClass {
