--- a/client/src/components/SearchBar/FindDoctorSearch.module.css
+++ b/client/src/components/SearchBar/FindDoctorSearch.module.css
@@ -1,3 +1,48 @@
+.filterSection {
+  margin: 20px 0;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.filterSection label {
+  /* display: block; */
+  margin-bottom: 5px;
+  margin-left: 5px;
+  font-weight: bold;
+}
+
+.filterSection input {
+  /* width: calc(100% - 12px); */
+  padding: 8px;
+  /* margin-bottom: 15px; */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100px;
+}
+
+.applyFiltersButton {
+  margin-left: 20px;
+  background-color: #4caf50; /* Green */
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.applyFiltersButton:hover {
+  background-color: #45a049; /* Darker green */
+}
+
 .input_wrapper {
   width: 400px;
   height: 3rem;
@@ -24,6 +69,7 @@
   align-items: center;
   position: relative;
   margin: 2px auto;
+  flex-direction: row;
 }
 
 .image {
