--- a/client/src/components/LoginSignUp/styles/SignUp.module.css
+++ b/client/src/components/LoginSignUp/styles/SignUp.module.css
@@ -1,15 +1,15 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 * {
   margin: 0;
   padding: 0;
   outline: none;
   font-family: "Poppins", sans-serif;
-}
+} */
 .body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 97vh;
   overflow: hidden;
   background: #eef7fd;
 }
@@ -21,13 +21,19 @@
   width: 400px;
   background: #fff;
   text-align: center;
-  border-radius: 50px;
-  padding: 50px 35px 10px 35px;
+  border-radius: 15px;
+  padding: 20px 30px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  /* min-height: 600px; */
 }
+.signupbtn {
+  margin-top: 0.5rem !important;
+}
+
 .container header {
-  font-size: 35px;
+  font-size: 28px;
   font-weight: 600;
-  margin: 0 0 30px 0;
+  /* margin-bottom: 20px; */
 }
 .container .form_outer {
   width: 100%;
@@ -53,16 +59,19 @@
 .form_outer form .page .field {
   width: 330px;
   height: 45px;
-  margin: 30px 0;
-  display: flex;
+  margin: 50px 0;
+  /* display: flex; */
   position: relative;
 }
 form .page .field .label {
   position: absolute;
-  top: -30px;
+  top: -20px;
+  left: 15px;
+  font-size: 16px;
+  color: #333;
   font-weight: 500;
 }
-form .page .field input {
+/* form .page .field input {
   height: 100%;
   width: 100%;
   border: 1px solid lightgrey;
@@ -75,7 +84,25 @@ form .page .field select {
   padding-left: 10px;
   font-size: 17px;
   font-weight: 500;
+} */
+
+form .page .field input,
+form .page .field select {
+  width: 100%;
+  height: 45px;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  padding: 0 15px;
+  font-size: 16px;
+  transition: border-color 0.3s;
+  margin: 10px;
 }
+
+form .page .field input:focus,
+form .page .field select:focus {
+  border-color: var(--primary-color-dark);
+}
+
 form .page .field button {
   width: 100%;
   height: calc(100% + 5px);
@@ -95,7 +122,7 @@ form .page .field button:hover {
   background: #344563;
 }
 form .page .btns button {
-  margin-top: -20px !important;
+  /* margin-top: -20px !important; */
 }
 form .page .btns button.prev {
   margin-right: 3px;
@@ -107,16 +134,15 @@ form .page .btns button.next {
 
 .signInButton {
   width: 100%;
+  height: 50px;
   border: none;
   background: var(--primary-color-dark);
-  padding: 5px;
-  margin-top: -20px;
+  margin-top: 10px;
   border-radius: 5px;
   color: #fff;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
-  letter-spacing: 1px;
   text-transform: uppercase;
   transition: 0.5s ease;
 }
@@ -204,4 +230,18 @@ form .page .btns button.next {
 .progress_bar .step .check.active {
   display: block;
   color: #fff;
+}
+
+.invalid input {
+  border: 1px solid #b40e0e;
+  background-color: #fddddd;
+}
+
+.invalid input:focus {
+  border-color: #ff8800;
+  background-color: #fbe8d2;
+}
+
+.error {
+  color: #b40e0e;
 }
