--- a/client/src/components/LoginSignUp/styles/SignUp.module.css
+++ b/client/src/components/LoginSignUp/styles/SignUp.module.css
@@ -132,6 +132,13 @@ form .page .btns button.next {
   margin-left: 3px;
 }
 
+form .page .btns button:disabled {
+  background-color: #d6d6d6;
+  color: #a1a1a1;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
 .signInButton {
   width: 100%;
   height: 50px;
