Complete redux state management completed for alerts

--- a/client/src/components/AppointmentForm/AppointmentForm.module.css
+++ b/client/src/components/AppointmentForm/AppointmentForm.module.css
@@ -15,7 +15,7 @@
 .details_booking {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  align-items: start;
+  align-items: center;
   gap: 20px;
   position: relative;
 }
@@ -41,7 +41,7 @@
   flex-direction: column;
   align-items: center;
   grid-column: 3 / 4;
-  max-height: 30vh;
+  /* max-height: 30vh; */
   overflow-y: auto;
 }
 
