--- a/client/src/components/UI/Modal/Modal.module.css
+++ b/client/src/components/UI/Modal/Modal.module.css
@@ -22,7 +22,7 @@
   position: fixed;
   top: 15vh;
   left: 5%;
-  width: 90%;
+  /* width: 90%; */
   /* height: 70vh;
   max-height: 70vh; */
   background-color: white;
