--- a/client/src/components/LoginSignUp/styles/SignUp.module.css
+++ b/client/src/components/LoginSignUp/styles/SignUp.module.css
@@ -173,8 +173,9 @@ button:disabled {
   margin-bottom: 8px;
 }
 .progress_bar .step .bullet {
-  height: 25px;
-  width: 25px;
+  height: 17px;
+  /* width: 15px; */
+  aspect-ratio: 1;
   border: 2px solid #000;
   display: inline-block;
   border-radius: 50%;
@@ -189,9 +190,11 @@ button:disabled {
   background: var(--primary-color-dark);
 }
 .progress_bar .step .bullet span {
+  font-size: small;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 25%;
+  top: -40%;
+  /* transform: translateX(-50%); */
 }
 .progress_bar .step .bullet.active span {
   display: none;
@@ -200,8 +203,8 @@ button:disabled {
 .progress_bar .step .bullet:after {
   position: absolute;
   content: "";
-  bottom: 11px;
-  right: -51px;
+  bottom: 5px;
+  right: -55px;
   height: 3px;
   width: 44px;
   background: #262626;
