--- a/client/src/components/MainDash/MainDash.module.css
+++ b/client/src/components/MainDash/MainDash.module.css
@@ -1,8 +1,12 @@
 .MainDash {
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+
+.MainDash h1 {
+  margin-top: 1rem;
 }
 
 @media screen and (max-width: 1200px) {
