--- a/client/src/components/RightSide/RightSide.module.css
+++ b/client/src/components/RightSide/RightSide.module.css
@@ -1,4 +1,4 @@
-.RightSide::before {
+/* .RightSide::before {
   content: "";
   position: absolute;
   top: 6rem;
@@ -6,13 +6,14 @@
   width: 2px;
   height: 80%;
   background-color: var(--primary-color-dark);
-  z-index: 1; /* Ensure it's above the background but below other content */
-}
+  z-index: 1;
+} */
 
 .RightSide {
   display: flex;
   flex-direction: column;
-  width: 95%;
+  /* width: 95%; */
+  width: 300px;
   justify-content: space-evenly;
 }
 
