--- a/client/src/components/SideBar/Sidebar.module.css
+++ b/client/src/components/SideBar/Sidebar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
   transition: all 300ms ease;
   /* background: var(--nav-side); */
   color: var(--nav-text-color);
@@ -17,7 +17,7 @@
   display: flex;
   height: 5rem;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 1.5rem;
   gap: 1rem;
   align-items: center;
   justify-content: center;
@@ -39,7 +39,7 @@
   margin-top: 4rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
 }
 
 .menuItem {
@@ -60,9 +60,11 @@
 }
 
 .menu .menuItem:last-child {
-  position: absolute;
+  margin-top: 3rem;
+  font-size: 1rem;
+  /* position: absolute;
   bottom: 2.3rem;
-  width: 100%;
+  width: 100%; */
 }
 
 .active {
