--- a/client/src/components/AppointmentCalender/AppointmentCalendar.module.css
+++ b/client/src/components/AppointmentCalender/AppointmentCalendar.module.css
@@ -17,7 +17,8 @@
   padding-left: 20px;
 }
 
-h2 {
+.calendarSection h2,
+.appointmentsSection h2 {
   font-size: 2rem;
   color: #2c3e50;
   margin-bottom: 20px;
