--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@ nav {
   background-color: var(--nav-color);
   z-index: 100;
   border-bottom: 0.25px solid transparent;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 nav .nav_bar {
