--- a/client/src/components/Navbar/Profile.module.css
+++ b/client/src/components/Navbar/Profile.module.css
@@ -45,12 +45,21 @@
   font-weight: 500;
 }
 
+.main img {
+  width: 2.5rem;
+  height: 2.5rem;
+
+  border-radius: 50%;
+  /* margin-right: 15px; */
+}
+
 .user_info img {
-  width: 60px;
+  width: 3.5rem;
+  height: 3.5rem;
+
   border-radius: 50%;
   margin-right: 15px;
 }
-
 .menu hr {
   border: 0;
   height: 1px;
