Working on updates component

--- a/client/src/components/RightSide/RightSide.module.css
+++ b/client/src/components/RightSide/RightSide.module.css
@@ -17,6 +17,11 @@
   justify-content: space-evenly;
 }
 
+.RightSide h3 {
+  /* text-align: center; */
+  margin-right: 2rem;
+}
+
 @media screen and (max-width: 1200px) {
   .RightSide {
     justify-content: flex-start;
