--- a/client/src/components/Appointments/AppointmentDetails.module.css
+++ b/client/src/components/Appointments/AppointmentDetails.module.css
@@ -17,13 +17,13 @@
   cursor: pointer;
 }
 
-h2 {
+.h2 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #333;
 }
 
-p {
+.p {
   margin: 8px 0;
 }
 
