--- a/client/src/components/Updates/Updates.module.css
+++ b/client/src/components/Updates/Updates.module.css
@@ -19,6 +19,10 @@
   height: 3.2rem;
 }
 
-.noti > div > span:nth-of-type(1) {
+/* .noti > div > span:nth-of-type(1) {
+  font-weight: bold;
+} */
+
+.noti div span {
   font-weight: bold;
 }
