--- a/client/src/components/Updates/Updates.module.css
+++ b/client/src/components/Updates/Updates.module.css
@@ -12,6 +12,12 @@
 .update {
   display: flex;
   gap: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #ddd;
+}
+
+.update:last-child {
+  border-bottom: none;
 }
 
 .update > img {
