Role based authorization for user and doctor done, now working on doctor dashboard

--- a/client/src/components/MainDash/MainDash.module.css
+++ b/client/src/components/MainDash/MainDash.module.css
@@ -9,6 +9,11 @@
   margin-top: 1rem;
 }
 
+.tables1 {
+  display: flex;
+  gap: 1rem;
+}
+
 @media screen and (max-width: 1200px) {
   .MainDash {
     justify-content: flex-start;
