--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -11,10 +11,11 @@
 
 .PageContent {
   flex: 1;
-  margin: 0 20px;
+  /* margin: 0 20px; */
   display: flex;
   justify-content: center;
   align-items: center;
+  /* margin-left: 4rem; */
 }
 
 .ProfileClass {
@@ -22,7 +23,7 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  gap: 5rem;
+  /* gap: 5rem; */
 }
 
 @media screen and (max-width: 1200px) {
