--- a/client/src/components/UsersTable/Filters.module.css
+++ b/client/src/components/UsersTable/Filters.module.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 20px;
+  margin: 10px 0;
   justify-content: center;
 }
 
 .filters label {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
   font-size: 16px;
   margin: 0 10px;
 }
