--- a/client/src/components/Admin/Doctors.module.css
+++ b/client/src/components/Admin/Doctors.module.css
@@ -95,6 +95,66 @@
   transition: background-color 0.3s;
 }
 
+.formGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.formGroup label {
+  font-size: 14px;
+  color: #555;
+  /* margin-bottom: 8px; */
+  font-weight: 500;
+}
+
+.formGroup input,
+.formGroup select {
+  width: 100%;
+  padding: 6px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 0.3s ease;
+}
+
+.formGroup input:focus,
+.formGroup select:focus {
+  border-color: #007bff;
+}
+
+.formGroup select {
+  appearance: none;
+  background-color: #fff;
+}
+
+.formGroup input[type="date"] {
+  padding-left: 10px;
+}
+
+.button {
+  padding: 12px 20px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  align-self: center;
+  width: 100%;
+  font-weight: 600;
+}
+
+.modalContent button:hover {
+  background-color: #0056b3;
+}
+
+.formGroup:focus::placeholder,
+select:focus::placeholder {
+  color: #007bff;
+}
+
 .loading,
 .error,
 .noDoctors {
