changed the backend api route

--- a/client/src/components/LoginSignUp/styles/SignUp.module.css
+++ b/client/src/components/LoginSignUp/styles/SignUp.module.css
@@ -257,8 +257,8 @@ button:disabled {
 }
 
 .spinner {
-  border: 4px solid #f3f3f3; /* Light grey */
-  border-top: 4px solid #3498db; /* Blue */
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
   border-radius: 50%;
   width: 16px;
   height: 16px;
