started working on loading spinner

--- a/client/src/Statistics/Statistics.module.css
+++ b/client/src/Statistics/Statistics.module.css
@@ -25,6 +25,16 @@
   margin-top: 10px;
 }
 
+.spinnerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px; /* Full screen height */
+  width: 100%; /* Ensures it takes the full width of its parent */
+  margin: auto; /* Centers it horizontally in the parent container */
+  flex-direction: column;
+}
+
 @media screen and (max-width: 1200px) {
   .statistics {
     flex-direction: column;
